finally got it to be responsive, made the boxes wrap to avoid warping

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,7 +67,8 @@ header{
 #mainBody {
 
     display: flex;
-    justify-content: space-around;
+    flex-direction: row;
+    flex-wrap: wrap;
     height: 100vh;
 
 }
